# Licencjat

./: .gitignore
Bibliografia/: index.txt  możliwości.txt
Kod/: build_all.sh
Kod/CG/: CG_base.cpp  wyniki.txt
Kod/CG/CG_dist-ranges/: CMakeLists.txt
Kod/CG/CG_dist-ranges/src/: CMakeLists.txt  main.cpp  main_2.cpp
Kod/CG/GEN_DATA/: CMakeLists.txt
Kod/CG/GEN_DATA/src/: generate_data.cpp
Kod/CG/MPI/: CG_MPI.cpp  main  main.cpp
Kod/CG/SEQUENTIAL/: main  main.cpp
Kod/CG/SYCL/: CMakeLists.txt
Kod/CG/SYCL/src/: CG_SYCL.cpp  main.cpp
Kod/CG/dist-ranges/: CMakeLists.txt
Kod/CG/dist-ranges/src/: main.cpp
Kod/FFT/: compare  fft_base.cpp  fft_sycl.cpp  rezultaty.txt  wyniki.txt
Kod/FFT/FFT_dist-ranges/src/: main.cpp
Kod/FFT/GEN_DATA/src/: a.out  generate_data.cpp
Kod/FFT/MISC/: compare.cpp
Kod/FFT/MPI/: CMakeLists.txt  main  main.cpp
Kod/FFT/MPI/src/: MPI_bit_reverse  MPI_bit_reverse.cpp  MPI_fft  MPI_fft.cpp
Kod/FFT/SEQUENTIAL/: main  main.cpp
Kod/FFT/SYCL/: CMakeLists.txt
Kod/FFT/SYCL/src/: main.cpp  main2.cpp  sycl_learning.cpp
Kod/FFT/dist-ranges/: CMakeLists.txt
Kod/FFT/distributed-ranges/src/: distributed_ranges_fft.cpp
Kod/MONTE_CARLO/: wyniki.txt
Kod/MONTE_CARLO/MPI/: main  main.cpp
Kod/MONTE_CARLO/SEQUENTIAL/: main  main.cpp
Kod/MONTE_CARLO/SYCL/: CMakeLists.txt
Kod/MONTE_CARLO/SYCL/src/: main.cpp
Kod/MONTE_CARLO/dist-ranges/: CMakeLists.txt
Kod/MONTE_CARLO/dist-ranges/src/: CMakeLists.txt  main.cpp
Ksiazka/: bibliografia.bib  licencjat.tex  make.sh
Prezentacja/: Notatki.txt  Prezentacja.odp  latateat.aux  latateat.dvi  latateat.tex  latateat.toc  prezentacja.aux  prezentacja.nav  prezentacja.out  prezentacja.tex  prezentacja.toc
Prezentacja/_minted-prezentacja/: 148BEED2FD0F44468615AC89F2FEE1083E96F6CFF08F339E5966912A28E1209C.pygtex  5DF070A5F3C2D5799F9EC8AFD8B909566BFE2891467576C79BB751A5A7A71C4D.pygtex  93B65339D291C5D7601144ED05B43D573E96F6CFF08F339E5966912A28E1209C.pygtex  AFE64023CF25DB089652E2F0F3E171CF3E96F6CFF08F339E5966912A28E1209C.pygtex
